--- a/app/package.json
+++ b/app/package.json
@@ -53,6 +53,7 @@
     "random-access-file": "^1.3.1",
     "remarkable": "^1.7.1",
     "semver": "^5.3.0",
+    "sodium-signatures": "^2.0.0",
     "speedometer": "^1.0.0",
     "sqlite3": "^3.1.4",
     "through2": "^2.0.1",
